feat: Statfs cache
The statfs syscall output could be cached for each user requesting it.
The main goal is to prevent a flooding of unnecessary calls in certain
workloads.

The commit includes the option to tune it and adding it to the tweaks
hidden file parameters.

Signed-off-by: Dave <dave@leil.io>

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -237,6 +237,10 @@ Enable/disable logging to Linux notification area (default: 0).
 Set period of message suppression in seconds for logging on notification area 
 (default: 10).
 
+*-o statfscachetimeout=*'MSEC'::
+Set statfs cache timeout in milliseconds. When equal to 0 the cache is 
+disabled (default: 0).
+
 *-o usequotainvolumesize=*'0|1'::
 When set to 1, use the user and group specific quota hard limit to calculate
 the volume size (default: 0).
